language/move-prover/tests/sources/aborts-if.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/aborts-if.move:16:9 ───
    │
 16 │         aborts_if x <= y;
    │         ^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/aborts-if.move:12:5: abort2 (entry)
    =     at tests/sources/aborts-if.move:12:5: abort2 (exit)
    =         x = 281,
    =         y = 281

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/aborts-if.move:24:9 ───
    │
 24 │         aborts_if x <= y;
    │         ^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/aborts-if.move:20:5: abort3 (entry)
    =     at tests/sources/aborts-if.move:21:9: abort3
    =         x = 1323,
    =         y = 1323
    =     at tests/sources/aborts-if.move:20:5: abort3 (exit)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/aborts-if.move:32:9 ───
    │
 32 │         aborts_if x < y;
    │         ^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/aborts-if.move:28:5: abort4 (entry)
    =     at tests/sources/aborts-if.move:29:9: abort4
    =         x = 8879,
    =         y = 8879
    =     at tests/sources/aborts-if.move:29:23: abort4
    =     at tests/sources/aborts-if.move:28:5: abort4 (exit)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/aborts-if.move:44:9 ───
    │
 44 │         ensures x == y;
    │         ^^^^^^^^^^^^^^^
    │
    =     at tests/sources/aborts-if.move:38:5: abort9 (entry)
    =     at tests/sources/aborts-if.move:39:9: abort9
    =         x = 854,
    =         y = 853
    =     at tests/sources/aborts-if.move:38:5: abort9 (exit)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/aborts-if.move:42:9 ───
    │
 42 │         aborts_if x > y;
    │         ^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/aborts-if.move:38:5: abort9 (entry)
    =     at tests/sources/aborts-if.move:39:9: abort9
    =     at tests/sources/aborts-if.move:39:23: abort9
    =     at tests/sources/aborts-if.move:38:5: abort9 (exit)
